# composite_vm

./: .gitignore  .hgignore  README.md
trunk/: todo
trunk/docs/: doxy_config
trunk/regressions/: CMakeLists.txt  Makefile  Normal.txt  neg_01_trash.mpr  neg_02_type.mpr  neg_03_arr_type.mpr  neg_04_type_name.mpr  neg_05_type_name.mpr  neg_06_target.mpr  neg_08_empty_body.mpr  neg_09_invalid_var.mpr  neg_10_const_noval.mpr  neg_11_const_write.mpr  neg_12_f_dubledec.mpr  neg_13_mov_x_x.mpr  neg_14_mov_x_x.mpr  neg_15_no_handler.mpr  neg_16_diff_types.mpr  neg_17_var_range.mpr  neg_18_var_range.mpr  neg_19_fdecl.mpr  neg_20_fdecl.mpr  neg_21_callnotype.mpr  neg_22_callwrongtype.mpr  neg_23_callextratype.mpr  neg_25.mpr  neg_26.mpr  neg_27.mpr  neg_28_invalid_op.mpr  neg_29_invalid_exception_name.mpr  neg_30_invalid_var_name_in_handler.mpr  neg_31_invalid_var_name.mpr  neg_32_invalid_var_name.mpr  neg_33_invalid_arr_name.mpr  neg_34_handler_redefenition.mpr  neg_35_access_error.mpr  neg_36_defaule_constraint_error_handler.mpr  neg_37_invalid_arr_name.mpr  neg_38_ref_constraint_r.mpr  neg_39_ref_constraint_r.mpr  (+79 more)
trunk/src/: Array.cpp  Array.h  ArrayOperand.cpp  ArrayOperand.h  CMakeLists.txt  CallOperand.cpp  CallOperand.h  CodeBlockTranslator.cpp  CodeBlockTranslator.h  CodeExecuter.cpp  CodeExecuter.h  CodeTranslator.cpp  CodeTranslator.h  Command.cpp  Command.h  Context.cpp  Context.h  DataKeeper.cpp  DataKeeper.h  Exception.cpp  Exception.h  Function.cpp  Function.h  HeaderTranslator.cpp  HeaderTranslator.h  Label.cpp  Label.h  LabelOperand.cpp  LabelOperand.h  Operand.h  ParseError.cpp  ParseError.h  Program.cpp  Program.h  TranslatedFileInfo.cpp  TranslatedFileInfo.h  Translator.cpp  Translator.h  Value.cpp  Value.h  (+5 more)
trunk/test/: ArrayOperandTest.cpp  ArrayTest.cpp  CMakeLists.txt  CallOperandTest.cpp  CodeBlockTranslatorTest.cpp  CodeExecuterTest.cpp  CodeTranslatorTest.cpp  CommandTest.cpp  ContextTest.cpp  DataKeeperTest.cpp  ExceptionTest.cpp  FunctionTest.cpp  HeaderTranslatorTest.cpp  LabelOperandTest.cpp  LabelTest.cpp  ParseErrorTest.cpp  ProgramTest.cpp  TranslatedFileInfoTest.cpp  TranslatorTest.cpp  ValueTest.cpp  VarOperandTest.cpp  VarTranslatorTest.cpp
trunk/test/CodeExecuterTestFiles/: 1.mpr  2.mpr  3.mpr  4.mpr  5.mpr  6.mpr  7.mpr  8.mpr  9.mpr
trunk/test/ContextTestFiles/: 1.mpr
trunk/test/FunctionTestFiles/: 1.mpr  2.mpr  3.mpr  4.mpr
trunk/test/TranslatorTestFiles/: 1.mpr  10.mpr  11.mpr  12.mpr  2.mpr  3.mpr  4.mpr  5.mpr  6.mpr  7.mpr  8.mpr  9.mpr  false_1.mpr  false_10.mpr  false_11.mpr  false_12.mpr  false_13.mpr  false_14.mpr  false_15.mpr  false_16.mpr  false_17.mpr  false_18.mpr  false_19.mpr  false_2.mpr  false_20.mpr  false_21.mpr  false_22.mpr  false_23.mpr  false_24.mpr  false_25.mpr  false_26.mpr  false_3.mpr  false_4.mpr  false_5.mpr  false_6.mpr  false_7.mpr  false_8.mpr  false_9.mpr
trunk/time_tests/: 01_factorial_.mpr  02_array.mpr
